--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "@types/react": "^18.2.66",
+    "@types/node": "^20.12.7"
+  }
 }
